chore: minimize dockerfile